--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@ body{
 /* header */
 .header .navbar{
     background-color: white;
+    box-shadow: 0px 4px 20px rgba(51, 51, 51, 0.1);
 }
 .header .navbar .media {
     margin-top: 20px;
