--- a/assets/css/galeri.css
+++ b/assets/css/galeri.css
@@ -47,6 +47,16 @@ body{
 
 
 /* galeri */
+.galeri h2{
+    margin-top: 80px;
+    margin-bottom: 48px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 39px;
+    color: #00AF00;
+}
 .galeri .overlay-slide {
 	position: relative;
     box-sizing: border-box;
