--- a/assets/css/artikel.css
+++ b/assets/css/artikel.css
@@ -214,3 +214,81 @@
 .footer p span{
     color: yellow;
 }
+
+
+
+@media (min-width: 576px){
+    .artikel .artikel_terbaru .img {
+        position: relative;
+        width: 100%;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    .artikel .artikel_terbaru .desc {
+        position: absolute;
+        top: 70%;
+        padding: 0 26%;
+        justify-content: center;
+        text-align: center;
+        display: block;
+    }
+    .media-body h3 {
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 20px;
+        text-transform: uppercase;
+        color: #333333;
+    }
+    .media-body p {
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 21px;
+        color: #333333;
+    }
+}
+
+@media (min-width: 768px){
+    .artikel .artikel_terbaru .desc {
+        position: absolute;
+        top: 50%;
+        padding: 0 19%;
+        justify-content: center;
+        text-align: center;
+        display: block;
+    }
+}
+
+@media (min-width: 1200px){
+    .artikel .artikel_terbaru .img{
+        position: relative;
+    }
+    .artikel .artikel_terbaru .desc {
+        position: absolute;
+        top: 42%;
+        padding: 0 3%;
+        justify-content: center;
+        text-align: center;
+        display: block;
+    }
+    .media-body h3{
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 26px;
+        text-transform: uppercase;
+        color: #333333;
+    }
+    .media-body p{
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 24px;
+        color: #333333;
+    }
+}
