--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -77,6 +77,11 @@ body{
     box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.1);
     border-radius: 4px;
 }
+.kontak .form-control{
+    border: 1px solid #D9D9D9;
+    box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+}
 .kontak form label{
     font-family: 'Open Sans';
     font-style: normal;
@@ -117,4 +122,45 @@ body{
 }
 .footer p span{
     color: yellow;
+}
+
+
+@media (min-width: 576px){
+    .kontak {
+        padding: 72px 50px;
+    }
+    .kontak h2 {
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: bold;
+        font-size: 54px;
+        line-height: 84px;
+        color: #00B000;
+    }
+}
+@media (min-width: 768px){
+    .kontak {
+        padding: 72px 100px;
+    }
+    .kontak form input {
+        height: 52px;
+        width: 100%;
+    }
+}
+@media (min-width: 1200px){
+    .kontak {
+        padding: 72px 323px;
+    }
+    .kontak h2 {
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: bold;
+        font-size: 62px;
+        line-height: 84px;
+        color: #00B000;
+    }
+    .kontak form input {
+        height: 52px;
+        width: 380px;
+    }
 }
