--- a/assets/css/galeri.css
+++ b/assets/css/galeri.css
@@ -71,7 +71,7 @@ body{
     box-sizing: border-box;
     bottom: 0;
     transform: translate(0, 100%);
-    background: linear-gradient(239.17deg, #1465756e 0%, #009B4Cad 61.61%);
+    background: linear-gradient(218.02deg, #023B09 0%, #00AF00 61.61%);
     transition: all 0.2s ease-in;
     width: 100%;
     height: 50%;
@@ -158,4 +158,27 @@ body{
 }
 .footer p span{
     color: yellow;
+}
+
+
+
+@media (min-width: 576px){
+    .galeri .galeri1{
+        margin-bottom: 30px;
+        margin-top: 30px;
+    }
+}
+
+@media (min-width: 1200px){
+    .galeri .galeri1{
+        margin-bottom: 0;
+        margin-top: 0;
+    }
+}
+
+@media (min-width: 768px){
+    .galeri .galeri1{
+        margin-bottom: 0;
+        margin-top: 0;
+    }
 }
