--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -47,9 +47,6 @@ body{
 }
 
 /* galeri */
-.kontak{
-    padding: 72px 323px;
-}
 .kontak h2{
     font-family: 'Open Sans';
     font-style: normal;
@@ -57,6 +54,7 @@ body{
     font-size: 62px;
     line-height: 84px;
     color: #00B000;
+    margin-top: 72px;
 }
 .kontak p{
     font-family: 'Open Sans';
@@ -126,31 +124,23 @@ body{
 
 
 @media (min-width: 576px){
-    .kontak {
-        padding: 72px 50px;
-    }
     .kontak h2 {
         font-family: 'Open Sans';
         font-style: normal;
         font-weight: bold;
-        font-size: 54px;
+        font-size: 45px;
         line-height: 84px;
         color: #00B000;
+        margin-top: 40px;
     }
 }
 @media (min-width: 768px){
-    .kontak {
-        padding: 72px 100px;
-    }
     .kontak form input {
         height: 52px;
         width: 100%;
     }
 }
 @media (min-width: 1200px){
-    .kontak {
-        padding: 72px 323px;
-    }
     .kontak h2 {
         font-family: 'Open Sans';
         font-style: normal;
