--- a/assets/css/galeri.css
+++ b/assets/css/galeri.css
@@ -107,7 +107,7 @@ body{
     display: block;
     text-align: center;
     background: linear-gradient(238.71deg, rgba(2, 59, 9, 0.5) 0%, rgba(0, 175, 0, 0.5) 61.61%);
-    width: 95%;
+    width: 100%;
     height: 100%;
     padding-top: 40%;
 }
@@ -134,6 +134,15 @@ body{
     font-size: 20px;
     line-height: 30px;
     color: #FFFFFF;
+}
+.galeri .overlay-slide .text-muted {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 21px;
+    color: white !important;
+    margin-bottom: 0;
 }
 
 .carousel-indicators li{
@@ -222,9 +231,6 @@ body{
         bottom: 90px;
         padding: 10px;
     }
-    .galeri .desc h5{
-        font-size: 16px;
-    }
     .carousel .youtube{
         margin-top: -70%;
     }
@@ -241,36 +247,37 @@ body{
     .carousel .youtube{
         margin-top: -70%;
     }
-    /* .img .galeri1{
-        position: relative;
-        box-sizing: border-box;
-        overflow: hidden;
+    .galeri .overlay-slide p {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 300;
+        font-size: 16px !important;
+        line-height: 21px;
+        color: white !important;
+        margin-bottom: 0;
     }
-    
+    .galeri .overlay-slide h5 {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 18px !important;
+        line-height: 30px !important;
+        color: #FFFFFF;
+        margin-top: 0;
+    }
     .img .youtube{
         position: absolute;
         box-sizing: border-box;
         bottom: 0;
-        width: 45.3%;
-        height: 100%;
         padding: 10px;
         display: block;
         text-align: center;
-        top: 50%;
-    }
-     .img .desc {
-        position: absolute;
-        box-sizing: border-box;
-        bottom: 0;
         background: linear-gradient(238.71deg, rgba(2, 59, 9, 0.5) 0%, rgba(0, 175, 0, 0.5) 61.61%);
-        width: 4%;
-        height: 600px;
-        padding: 10px;
-        top: 10px;
+        width: 95% !important;
+        height: 100%;
+        padding-top: 40%;
+        top: 64% !important;
     }
-    .img .desc p{
-        margin-top: 500px;
-    } */
 }
 
 @media (min-width: 768px){
@@ -325,5 +332,8 @@ body{
     }
     .galeri .col-sm .desc p{
         font-size: 10px;
+    }
+    .galeri .desc h5{
+        font-size: 18px;
     }
 }
