--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,5 +1,5 @@
-
 body{
+    width: 100% !important;
     overflow-x: hidden;
 }
 
@@ -123,15 +123,54 @@ body{
 }
 
 
-@media (min-width: 576px){
+@media (max-width: 576px){
     .kontak h2 {
         font-family: 'Open Sans';
         font-style: normal;
         font-weight: bold;
-        font-size: 45px;
+        font-size: 30px;
         line-height: 84px;
         color: #00B000;
         margin-top: 40px;
+    }
+    .kontak p{
+        font-size: 18px;
+        margin-left: 0;
+        margin-top: 0;
+    }
+    .kontak form input{
+        height: 45px;
+    }
+    .kontak form input, .contact form textarea{
+        background: #FFFFFF;
+        border: 1px solid #D9D9D9;
+        box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.1);
+        border-radius: 4px;
+    }
+    .kontak .form-control{
+        border: 1px solid #D9D9D9;
+        box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.1);
+        border-radius: 4px;
+    }
+    .kontak form label{
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 25px;
+        color: #000000;
+    }
+    .kontak .btn-success{
+        background: #00AF00;
+        border-radius: 5px;
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 25px;
+        padding: 13px 0;
+        color: #FFFFFF;
+        border: none;
     }
 }
 @media (min-width: 768px){
