--- a/assets/css/galeri.css
+++ b/assets/css/galeri.css
@@ -191,7 +191,7 @@ body{
 
 
 
-@media (min-width: 576px){
+@media (max-width: 576px){
     .galeri .galeri1{
         margin-bottom: 80px;
         margin-top: 30px;
@@ -207,8 +207,8 @@ body{
         display: block;
         text-align: center;
         background: linear-gradient(238.71deg, rgba(2, 59, 9, 0.5) 0%, rgba(0, 175, 0, 0.5) 61.61%);
-        width: 95%;
-        height: 83%;
+        width: 94%;
+        height: 80%;
         top: 66%;
         padding-top: 40%;
     }
@@ -220,8 +220,8 @@ body{
         display: block;
         text-align: center;
         background: linear-gradient(238.71deg, rgba(2, 59, 9, 0.5) 0%, rgba(0, 175, 0, 0.5) 61.61%);
-        width: 94%;
-        height: 81%;
+        width: 93%;
+        height: 79%;
         top: 66%;
         padding-top: 40%;
     }
@@ -233,6 +233,10 @@ body{
     }
     .carousel .youtube{
         margin-top: -70%;
+    }
+    .overlay-slide .galeri3, .galeri4{
+        width: 100%;
+        margin-top: 30px;
     }
 }
 
