--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 body{
     overflow-x: hidden;
 }
@@ -45,6 +44,8 @@ body{
     line-height: 25px;
     color: #00AF00 !important;
 }
+
+
 
 /* hero */
 .hero .hero-body h2{
@@ -154,6 +155,16 @@ body{
     margin-left: 50px;
     position: absolute;
 }
+.about .img .img-two::before{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: linear-gradient(252.5deg, #023B09 0%, #00AF00 61.61%);
+    opacity: 0.6;
+    content: '';
+}
 .youtube{
     position: relative;
     z-index: 1;
@@ -197,12 +208,12 @@ body{
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: normal;
-    font-size: 20px;
-    line-height: 27px;
+    font-size: 12px;
+    line-height: 20px;
     color: #FFFFFF;
 }
 .galeri .desc .btn-success i{
-    font-size: 20px;
+    font-size: 17px;
     margin-left: 0px;
 }
 .galeri .img-1{
@@ -227,6 +238,7 @@ body{
 }
 .galeri .img .img-1 .youtube{
     top: -150px;
+    left: 55%;
     display: block;
     text-align: center;
 }
@@ -300,7 +312,7 @@ body{
 
 
 /* responsive */
-@media (min-width: 576px){
+@media (max-width: 576px){
     body{
         overflow-x: hidden;
     }
@@ -372,11 +384,12 @@ body{
     }
     .galeri .desc .btn-success{
         margin-bottom: 30px;
+        font-size: 20px;
     }
     .galeri .img .img-1 .galeri1::before{
         position: absolute;
-        width: 91%;
-        height: 76%;
+        width: 94%;
+        height: 80%;
         top: 0;
         left: 15px;
         background: linear-gradient(252.5deg, #023B09 0%, #00AF00 61.61%);
@@ -386,10 +399,15 @@ body{
         padding: 0;
     }
     .galeri .img .img-1 .youtube{
-        top: -100px;
+        top: -110px;
         display: block;
         text-align: center;
         margin: 0 auto;
+        left: 0;
+    }
+    .galeri .galeri4{
+        margin-top: 25px;
+        margin-bottom: 25px;
     }
 
     /* kontak */
@@ -402,10 +420,7 @@ body{
     .kontak .form-group .email{
         width: 100%;
     }
-
 }
-
-
 @media (min-width: 768px){
     .galeri {
         margin-top: 130px;
@@ -418,8 +433,7 @@ body{
         width: auto;
     }
     .galeri .img .youtube{
-        margin-left: 0;
-        margin-right: 0;
+        margin-left: px;
     }
     .galeri .img .img-3, 
     .galeri .img .img-4{
@@ -446,9 +460,23 @@ body{
         display: block;
         text-align: center;
     }
-    .about .img .youtube{
-        margin-left: 10%;
-        top: -20px;
+    .about {
+        margin: 50px 30px 0 30px;
+        padding: 58px 20px 85px 20px;
+    }
+    .about h3{
+        font-size: 24px;
+        line-height: 28px;
+    }
+    .about .img .img-one{
+        margin-left: 300px;
+        width: 72%;
+        margin-top: 20px;
+    }
+    .about .img .img-two{
+        margin-left: 0;
+        width: 70%;
+        margin-top: -250px;
     }
     .about .img .img-two::before{
         position: absolute;
@@ -459,6 +487,11 @@ body{
         background: linear-gradient(252.5deg, #023B09 0%, #00AF00 61.61%);
         opacity: 0.6;
         content: '';
+    }
+    .about .img .youtube{
+        margin-left: px;
+        margin-right: 0;
+        margin-bottom: 55px;
     }
     .hero{
         padding: 0;
@@ -474,9 +507,17 @@ body{
         font-size: 18px;
         padding: 20px 48px;
     }
+    /* kontak */
+    .kontak{
+        margin: 0 30px 32px 30px;
+    }
+    .kontak h3{
+        font-size: 27px;
+    }
+    .kontak .form-group .email{
+        width: 100%;
+    }
 }
-
-
 
 @media (min-width: 1200px){
     .header .navbar{
@@ -636,7 +677,7 @@ body{
         z-index: 1;
         margin-right: 100%;
         display: flex;
-        top: -50px;
+        top: -100px;
         margin-left: -80px;
     }
     
@@ -718,6 +759,7 @@ body{
         top: -150px;
         display: block;
         text-align: center;
+        left: 60%;
     }
     
     
@@ -768,3 +810,5 @@ body{
     }
     
 }
+
+
