--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,9 @@ body{
 
 
 /* hero */
+.hero .hero-body {
+    padding: 15px;
+}
 .hero .hero-body h2{
     font-family: 'Open Sans';
     font-style: normal;
@@ -320,6 +323,9 @@ body{
     .hero {
         padding:  0;
     }
+    .hero .bg-cowok {
+        display: none;
+    }
     .hero .hero-body h2{
         font-size: 25px;
         line-height: 40px;
@@ -334,10 +340,13 @@ body{
         padding: 16px 42px;
         font-size: 16px;
     }
+    .header .navbar ul li {
+        margin-left: 0;
+    }
 
     /* tentang */
     .about {
-        margin: 50px 30px 0 30px;
+        margin: 15px;
         padding: 58px 20px 85px 20px;
     }
     .about h3{
@@ -370,10 +379,20 @@ body{
         margin-bottom: 55px;
     }
 
+    .media {
+        flex-direction: column;
+    }
+
 
     /* galeeri */
     .galeri {
         margin-top: 130px;
+    }
+    .galeri img {
+        width: 100%;
+    }
+    .youtube img {
+        width: 30px;
     }
     .galeri .img{
         display: block;
@@ -412,7 +431,8 @@ body{
 
     /* kontak */
     .kontak{
-        margin: 0 30px 32px 30px;
+        margin:15px;
+        padding: 20px;
     }
     .kontak h3{
         font-size: 27px;
