--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -46,7 +46,7 @@ body{
     color: #00AF00 !important;
 }
 
-/* galeri */
+/* kontak */
 .kontak h2{
     font-family: 'Open Sans';
     font-style: normal;
@@ -100,6 +100,12 @@ body{
     color: #FFFFFF;
     border: none;
 }
+.kontak .bg-cewek{
+    position: absolute;
+}
+.kontak .bg-cowok{
+    position: absolute;
+}
 
 
 /* footer */
@@ -124,6 +130,9 @@ body{
 
 
 @media (max-width: 576px){
+    .kontak .bg-cowok{
+        display: none;
+    }
     .kontak h2 {
         font-family: 'Open Sans';
         font-style: normal;
@@ -140,6 +149,7 @@ body{
     }
     .kontak form input{
         height: 45px;
+        width: 100%;
     }
     .kontak form input, .contact form textarea{
         background: #FFFFFF;
@@ -172,6 +182,7 @@ body{
         color: #FFFFFF;
         border: none;
     }
+
 }
 @media (min-width: 768px){
     .kontak form input {
